// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a personalised greeting for Lydia 1`] = `
<div>
  <h1>
    Hello, 
    Lydia
    !
  </h1>
</div>
`;

exports[`renders a personalised greeting for Mpho 1`] = `
<div>
  <h1>
    Hello, 
    Mpho
    !
  </h1>
</div>
`;

exports[`renders the default greeting when no name is provided 1`] = `
<div>
  <h1>
    Hello, 
    World
    !
  </h1>
</div>
`;
